# weird-tax

./: README.md  pyproject.toml
studies/: old_colony_trust_co_v_commissioner.ipynb
weird_tax/: rounding.py
